# LocalMonitor

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diskscan.rs  lib.rs  main.rs  startup.rs
src/components/: DiskTreemap.tsx  SettingsModal.tsx
src/lib/: fmt.ts  i18n.ts  treemap.ts
src/lib/__tests__/: fmt.test.ts  treemap.test.ts
src/state/: ui.ts
